@@ -1,5 +1,3 @@
-/*
-
 package edu.ktu.screenshotanalyser.checks.experiments;
 
 import java.awt.ComponentOrientation;
@@ -21,8 +19,7 @@ import org.opencv.core.Core;
 import org.opencv.core.Rect;
 import edu.ktu.screenshotanalyser.checks.BaseRuleCheck;
 import edu.ktu.screenshotanalyser.checks.BaseTextRuleCheck;
-import edu.ktu.screenshotanalyser.checks.StateCheckResults;
-import edu.ktu.screenshotanalyser.checks.DefectAnnotation;
+import edu.ktu.screenshotanalyser.checks.CheckResult;
 import edu.ktu.screenshotanalyser.checks.IStateRuleChecker;
 import edu.ktu.screenshotanalyser.checks.ResultImage;
 import edu.ktu.screenshotanalyser.checks.ResultsCollector;
@@ -48,7 +45,7 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 		
 		var db = new StatisticsManager();
 		var rule = new UnalignedControlsCheck();
-		var images = db.getList(rs -> rs.getString(1), "select s.FileName from ScreenShot s LEFT join TestRunDefect d on d.ScreenShotId = s.Id WHERE d.TestRunId = 10316 and d.DefectTypeId <> 34");
+		var images = db.getList("select s.FileName from ScreenShot s LEFT join TestRunDefect d on d.ScreenShotId = s.Id WHERE d.TestRunId = 10316 and d.DefectTypeId <> 34");
 		
 		for (var image : images)
 		{
@@ -57,27 +54,23 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 			
 			var state = new State("AA", null, new File(file), new File(stateFile), null);
 
-			rule.analyze(state);
+			rule.analyze(state, null);
 		}
 	}
 	
 	
 	@Override
-	public StateCheckResults analyze(State state)
+	public void analyze(State state, ResultsCollector failures)
 	{
-		var result = new StateCheckResults(state, this);		
-		
-		if (checkVerticalAlingment(result, state))
+		if (true == checkVerticalAlingment(state, failures))
 		{
-			return result;
+			return;
 		}
 
-		if (checkLabelAlignment(result, state))
+		if (true == checkLabelAlignment(state, failures))
 		{
-			return result;
+			return;
 		}
-
-		
 		
 		/*
 		
@@ -168,7 +161,19 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 					/*
 					 * 
 					 * 
-					 * 				
+					 * 				System.out.println(state.getStateFile().toString());
+				
+
+				ResultImage resultImage = null;
+				 resultImage = new ResultImage(state.getImageFile());								
+				
+					resultImage.drawBounds(editfield.getBounds());
+					resultImage.drawBounds(labels.get(0).getBounds());
+								 
+					resultImage.save(Settings.debugFolder + "a_" + UUID.randomUUID().toString() + "1.png");
+				 
+
+					return;
 					
 
 					 *-/
@@ -221,9 +226,7 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 			failures.addFailure(result);
 		}
 		
-		*-/
-		
-		return null;
+		*/
 	}
 	
 	private boolean isUseable(Control control)
@@ -248,11 +251,12 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 		return true;
 	}
 	
-	private boolean checkVerticalAlingment(StateCheckResults result, State state)
+	private boolean checkVerticalAlingment(State state, ResultsCollector failures)
 	{
-		var pixelScale = state.getImageSize().height / 1080.0f;
+		float pixelScale = state.getImageSize().height / 1080.0f;
 		var centerYdelta = 50.0f * pixelScale;
-		var controls = state.getActualControls().stream().filter(this::isUseable).toList();
+		var controls = state.getActualControls().stream().filter(p -> isUseable(p)).collect(Collectors.toList());
+		var defectiveControls = new HashSet<Control>();
 
 		for (var sourceControl : controls)
 		{
@@ -261,8 +265,9 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 				continue;
 			}
 
-			var nearbyControls = controls.stream().filter(p -> p.getParent() == sourceControl.getParent()).filter(p -> sourceControl != p && (isOnLeft(sourceControl, p, centerYdelta) || isOnRight(sourceControl, p, centerYdelta))).toList();
-			nearbyControls = nearbyControls.stream().filter(p -> Math.abs(p.getBounds().height - sourceControl.getBounds().height) < 10 * pixelScale).toList();
+			var nearbyControls = controls.stream().filter(p -> p.getParent() == sourceControl.getParent()).filter(p -> sourceControl != p && (isOnLeft(sourceControl, p, centerYdelta) || isOnRight(sourceControl, p, centerYdelta))).collect(Collectors.toList());
+
+			nearbyControls = nearbyControls.stream().filter(p -> Math.abs(p.getBounds().height - sourceControl.getBounds().height) < 10 * pixelScale).collect(Collectors.toList());
 
 			var sourceControlCenterY = getCenterY(sourceControl);
 
@@ -273,43 +278,54 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 			{
 				var deltaY = Math.abs(getCenterY(nc) - sourceControlCenterY);
 
-				if (deltaY < minDeltaY && (!isEmpty(nc, state.getImage())))
+				if (deltaY < minDeltaY)
 				{
-					minDeltaY = deltaY;
-					nearest = nc;
+					if (false == isEmpty(nc, state.getImage()))
+					{
+						minDeltaY = deltaY;
+						nearest = nc;
+					}
 				}
 			}
 
-			if (null != nearest &&  (minDeltaY > 3 * pixelScale))
+			if (null != nearest)
 			{
-				var message = "unaligned vertically";
-				
-				result.addAnnotation(new DefectAnnotation(sourceControl.getBounds(), message));
-				result.addAnnotation(new DefectAnnotation(nearest.getBounds(), message));
-				
-				return true;
+				if (minDeltaY > 3 * pixelScale)
+				{
+					defectiveControls.add(sourceControl);
+					defectiveControls.add(nearest);
+
+					if (null != failures)
+					{
+						failures.addFailure(new CheckResult(state, this, "unaligned vertically", 1));
+					}
+
+					annotateDefectImage(state, defectiveControls.stream().collect(Collectors.toList()));
+
+					return true;
+				}
 			}
 		}
 
 		return false;
 	}
 	
-	private boolean checkLabelAlignment(StateCheckResults result, State state)
+	private boolean checkLabelAlignment(State state, ResultsCollector failures)
 	{
 		var allTexts = state.getActualControls().stream().map(this::getText).collect(Collectors.joining(". "));
 		var languages = determineLanguageAll(allTexts, 0.8f);
 
-		if (languages.isEmpty())
+		if (0 == languages.size())
 		{
 			languages = determineLanguageShort(allTexts, 0.8f);
 		}
 
-		if (languages.isEmpty())
+		if (languages.size() == 0)
 		{
 			return false;
 		}
 
-		var distinctLanguages = languages.stream().map(this::isRtl).distinct().toList();
+		var distinctLanguages = languages.stream().map(this::isRtl).distinct().collect(Collectors.toList());
 
 		if (distinctLanguages.size() > 1)
 		{
@@ -317,7 +333,9 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 		}
 
 		var isRtl = distinctLanguages.get(0);
-		var textFields = state.getActualControls().stream().filter(p -> p.getText() != null && p.getText().trim().length() > 0 && p.isVisible()).toList();
+
+		var textFields = state.getActualControls().stream().filter(p -> p.getText() != null && p.getText().trim().length() > 0 && p.isVisible()).collect(Collectors.toList());
+
 		var b1 = new ArrayList<Control>();
 
 		for (var t : textFields)
@@ -328,9 +346,10 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 			}
 
 			var txx = t.getText().trim();
-			var letters = 0;
 
-			for (var i = 0; i < txx.length(); i++)
+			int letters = 0;
+
+			for (int i = 0; i < txx.length(); i++)
 			{
 				if (Character.isAlphabetic(txx.charAt(i)))
 				{
@@ -358,20 +377,23 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 					int leftMargin = getLeftMargin(image);
 					int rightMargin = getRightMargin(image);
 
-					if (!isRtl && (leftMargin > rightMargin))
+					if (!isRtl)
 					{
-						var lp = (float) leftMargin / (float) image.getWidth();
-						var rp = (float) rightMargin / (float) image.getWidth();
-
-						if ((lp > rp * 2) && (lp > 0.2))
+						if (leftMargin > rightMargin)
 						{
-							b1.add(t);
+							float lp = (float) leftMargin / (float) image.getWidth();
+							float rp = (float) rightMargin / (float) image.getWidth();
 
-							if (((float) b1.size() / (float) textFields.size()) > 0.7)
+							if ((lp > rp * 2) && (lp > 0.2))
 							{
-								b1.forEach(p -> result.addAnnotation(new DefectAnnotation(p.getBounds(), "unaligned horizontally")));
-									
-								return true;
+								b1.add(t);
+
+								if (((float) b1.size() / (float) textFields.size()) > 0.7)
+								{
+									annotateDefectImage(state, b1);
+
+									return true;
+								}
 							}
 						}
 					}
@@ -384,11 +406,11 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 
 	private int getLeftMargin(BufferedImage image)
 	{
-		var c = image.getRGB(0, 0);
+		int c = image.getRGB(0, 0);
 		
-		for (var x = 0; x < image.getWidth(); x++)
+		for (int x = 0; x < image.getWidth(); x++)
 		{
-			for (var y = 0; y < image.getHeight(); y++)
+			for (int y = 0; y < image.getHeight(); y++)
 			{
 				if (c != image.getRGB(x, y))
 				{
@@ -402,11 +424,11 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 	
 	private int getRightMargin(BufferedImage image)
 	{
-		var c = image.getRGB(image.getWidth() - 1, 0);
+		int c = image.getRGB(image.getWidth() - 1, 0);
 		
-		for (var x = image.getWidth() - 1; x >= 0; x--)
+		for (int x = image.getWidth() - 1; x >= 0; x--)
 		{
-			for (var y = 0; y < image.getHeight(); y++)
+			for (int y = 0; y < image.getHeight(); y++)
 			{
 				if (c != image.getRGB(x, y))
 				{
@@ -429,11 +451,11 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 		
 		image = image.getSubimage(r.x, r.y, r.width, r.height);
 		
-		var c = image.getRGB(0, 0);
+		int c = image.getRGB(0, 0);
 		
-		for (var x = 0; x < image.getWidth(); x++)
+		for (int x = 0; x < image.getWidth(); x++)
 		{
-			for (var y = 0; y < image.getHeight(); y++)
+			for (int y = 0; y < image.getHeight(); y++)
 			{
 				if (c != image.getRGB(x, y))
 				{
@@ -479,7 +501,7 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 			{
 				return false;
 			}
-			else*-/
+			else*/
 			{
 				return (onlyLeft && onLeft) || (onlyRight && onRight);
 			}
@@ -574,7 +596,10 @@ public class UnalignedControlsCheck extends BaseTextRuleCheck implements IStateR
 		return -1;
 	}
 	
-	private static final Pattern rtlLanguages = Pattern.compile("^(ar|dv|he|iw|fa|nqo|ps|sd|ug|ur|yi|.*[-_](Arab|Hebr|Thaa|Nkoo|Tfng))(?!.*[-_](Latn|Cyrl)($|-|_))($|-|_)");
+	static
+	{
+		rtlLanguages = Pattern.compile("^(ar|dv|he|iw|fa|nqo|ps|sd|ug|ur|yi|.*[-_](Arab|Hebr|Thaa|Nkoo|Tfng))(?!.*[-_](Latn|Cyrl)($|-|_))($|-|_)");
+	}
+	
+	private static final Pattern rtlLanguages;
 }
-
-*/
